--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Justin Myers <justin@justinmyers.net>"]
 python = "^3.7"
 requests = "^2.23.0"
 python-dotenv = {extras = ["cli"], version = "^0.13.0"}
+gitpython = "^3.1.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
